Update vscode configuration

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -35,37 +35,16 @@
     },
     "material-icon-theme.folders.color": "#90a4ae",
     "materialTheme.accent": "Bright Teal",
-    // "workbench.colorCustomizations": {
-    //     "activityBarBadge.background": "#64FFDA",
-    //     "list.activeSelectionForeground": "#64FFDA",
-    //     "list.inactiveSelectionForeground": "#64FFDA",
-    //     "list.highlightForeground": "#64FFDA",
-    //     "scrollbarSlider.activeBackground": "#64FFDA50",
-    //     "editorSuggestWidget.highlightForeground": "#64FFDA",
-    //     "textLink.foreground": "#64FFDA",
-    //     "progressBar.background": "#64FFDA",
-    //     "pickerGroup.foreground": "#64FFDA",
-    //     "tab.activeBorder": "#64FFDA",
-    //     "notificationLink.foreground": "#64FFDA",
-    //     "editorWidget.resizeBorder": "#64FFDA",
-    //     "editorWidget.border": "#64FFDA",
-    //     "settings.modifiedItemIndicator": "#64FFDA",
-    //     "settings.headerForeground": "#64FFDA",
-    //     "panelTitle.activeBorder": "#64FFDA",
-    //     "breadcrumb.activeSelectionForeground": "#64FFDA",
-    //     "menu.selectionForeground": "#64FFDA",
-    //     "menubar.selectionForeground": "#64FFDA"
-    // },
-    "workbench.colorTheme": "Andromeda Italic",
     "terminal.integrated.rendererType": "dom",
     "window.titleBarStyle": "native",
     "workbench.startupEditor": "newUntitledFile",
-    "workbench.iconTheme": "sweet-vscode-icons",
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter.notebook.ipynb"
     },
-    "window.zoomLevel": 1,
     "security.workspace.trust.untrustedFiles": "open",
+    "workbench.iconTheme": "sweet-vscode-icons",
+    "workbench.colorTheme": "Andromeda Italic Bordered",
+    "window.zoomLevel": 2,
     // "vscode_custom_css.imports": [ "file:///Users/{your username}/synthwave84.css"],
     // "vscode_custom_css.policy": true,
 }
